Implement create node-pool command
