# cloud/provision/types/node_pool_create_request.go
@@ -1,0 +1,10 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// NodePoolCreateRequest node pool create request
+// swagger:model NodePoolCreateRequest
+type NodePoolCreateRequest interface{}
