# cloud/provision/types/node_pool_digital_ocean_create_request.go
@@ -1,0 +1,99 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// NodePoolDigitalOceanCreateRequest node pool digital ocean create request
+// swagger:model NodePoolDigitalOceanCreateRequest
+type NodePoolDigitalOceanCreateRequest struct {
+
+	// Provider-specific cloud resources
+	// Required: true
+	Resource *DigitalOceanDropletConfiguration `json:"resource"`
+
+	// Provider-agnostic parameters
+	// Required: true
+	Variable *TemplateNodePool `json:"variable"`
+}
+
+// Validate validates this node pool digital ocean create request
+func (m *NodePoolDigitalOceanCreateRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateResource(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateVariable(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *NodePoolDigitalOceanCreateRequest) validateResource(formats strfmt.Registry) error {
+
+	if err := validate.Required("resource", "body", m.Resource); err != nil {
+		return err
+	}
+
+	if m.Resource != nil {
+		if err := m.Resource.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("resource")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *NodePoolDigitalOceanCreateRequest) validateVariable(formats strfmt.Registry) error {
+
+	if err := validate.Required("variable", "body", m.Variable); err != nil {
+		return err
+	}
+
+	if m.Variable != nil {
+		if err := m.Variable.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("variable")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NodePoolDigitalOceanCreateRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NodePoolDigitalOceanCreateRequest) UnmarshalBinary(b []byte) error {
+	var res NodePoolDigitalOceanCreateRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
